# colbert-server

./: .pre-commit-config.yaml  README.md  pyproject.toml  standalone.py
.github/workflows/: ci.yml  manual-release.yml  publish.yml  release.yml  verify-release.yml
colbert_server/: __init__.py  server.py
colbert_wiki/: __init__.py  data.py  server.py
tests/: test_cli.py
